--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code.",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/CosmoBoyMe/frontend-project-lvl3/workflows/hexlet-check/badge.svg)](https://github.com/CosmoBoyMe/frontend-project-lvl3/actions)",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build": "webpack",
     "start": "webpack serve",
@@ -19,26 +19,30 @@
   },
   "homepage": "https://github.com/CosmoBoyMe/frontend-project-lvl3#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/eslint-plugin": "^7.13.0",
-    "@babel/preset-env": "^7.13.9",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.1.1",
-    "eslint": "^7.21.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.1.5",
-    "html-webpack-plugin": "^5.2.0",
-    "jest": "^26.6.3",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.24.3",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "@babel/core": "7.13.8",
+    "@babel/eslint-plugin": "7.13.0",
+    "@babel/preset-env": "7.13.9",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "8.2.2",
+    "css-loader": "5.1.1",
+    "eslint": "7.21.0",
+    "eslint-config-airbnb-base": "14.2.1",
+    "eslint-plugin-babel": "5.3.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.1.5",
+    "html-webpack-plugin": "5.2.0",
+    "jest": "26.6.3",
+    "style-loader": "2.0.0",
+    "webpack": "5.24.3",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta2",
-    "popper.js": "^1.16.1"
+    "axios": "0.21.1",
+    "bootstrap": "5.0.0-beta2",
+    "lodash": "4.17.21",
+    "on-change": "2.2.3",
+    "popper.js": "1.16.1",
+    "yup": "0.32.9"
   }
 }
