--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
+    "@popperjs/core": "2.9.1",
     "axios": "0.21.1",
-    "bootstrap": "5.0.0-beta2",
+    "bootstrap": "5.0.0-beta3",
+    "i18next": "20.1.0",
     "lodash": "4.17.21",
     "on-change": "2.2.3",
     "popper.js": "1.16.1",
