--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "dependencies": {
     "@popperjs/core": "2.9.1",
     "axios": "0.21.1",
-    "bootstrap": "5.0.0-beta3",
+    "bootstrap": "4.5.3",
     "i18next": "20.1.0",
     "lodash": "4.17.21",
     "on-change": "2.2.3",
